--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
 
     <title>
       
-        404 Page not found | cmHubs
+        404 Page not found | Chengmin&#39;s Blog
       
     </title>
 
@@ -44,7 +44,7 @@
         <a class="navbar-brand" href="/">
             <img src="https://tva1.sinaimg.cn/large/006y8mN6ly1g75u7zx3o0j30tf0tf0u0.jpg" width="30" height="30" class="d-inline-block align-top"
     alt="">
-cmHubs
+Chengmin&#39;s Blog
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
             aria-label="Toggle navigation">
