--- a/contact/index.html
+++ b/contact/index.html
@@ -25,7 +25,7 @@ github: zhangchengmin99"/>
 
     <title>
       
-        Contact Me | Chengmin&#39;s Blog
+        Contact Me | cmHubs
       
     </title>
 
@@ -48,7 +48,7 @@ github: zhangchengmin99"/>
         <a class="navbar-brand" href="/">
             <img src="https://tva1.sinaimg.cn/large/006y8mN6ly1g75u7zx3o0j30tf0tf0u0.jpg" width="30" height="30" class="d-inline-block align-top"
     alt="">
-Chengmin&#39;s Blog
+cmHubs
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
             aria-label="Toggle navigation">
